--- a/dmv.html
+++ b/dmv.html
@@ -60,7 +60,7 @@
 				          <li><a href="#<!--index.html-->">Home</a></li>
 				          <li><a href="#<!--about.html-->">About</a></li>
 				          <li><a href="dmv.html">DMV</a></li>
-				          <li><a href="#<!--hotels.html-->">OODOO</a></li>
+				          <li><a href="oodoo.html">OODOO</a></li>
 				       				          					          		          
 				          <li><a href="#<!--contact.html-->">Contact</a></li>
 				        </ul>
@@ -310,7 +310,7 @@ DMV Studio is the new subsidiary production service. We have line produced featu
 								<h6>About</h6>
 								<p>
 DMV Studio, and its new Production Service is award winning production company with offices in Kolkata , Mumbai , Delhi .
-Established in 2014, DMV Studio produces Feature Films, TV Commercials, Documentaries and Photography Campaigns. Through its Production Services arm FILM IN INDIA, we also provide production support in the Indian Sub Continent.								</p>
+</p>
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-6">
