--- a/contact.html
+++ b/contact.html
@@ -143,8 +143,8 @@ Near 201 Bus Depot . Beside Nimta UBI Bank</h5>
 									<span class="lnr lnr-envelope"></span>
 								</div>
 								<div class="contact-details">
-									<h5>service@oodoo.com</h5>
-									<h5>info@oodoo.com</h5>
+									<h5>service@oodoogroup.com</h5>
+									<h5>info@oodoogroup.com</h5>
 									<p>Send us your query anytime!</p>
 								</div>
 							</div>														
