--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
 		</head>
-		<body>	<header id="header">
+		<body style="background-color:powderblue;">	<header id="header" style="background-color:black;">
 				<div class="header-top">
 					<div class="container">
 			  		<div class="row align-items-center">
@@ -105,7 +105,7 @@
 }
 </style>
 			<!-- Start contact-page Area -->
-			<section class="contact-page-area section-gap">
+			<section class="contact-page-area section-gap"style="background-color:powderblue;">
 				<div class="container">
 					<div class="row">
 						
