--- a/fly_high.html
+++ b/fly_high.html
@@ -30,8 +30,8 @@
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
 		</head>
-		<body>	
-			<header id="header">
+		<body style="background-color:powderblue;">	
+			<header id="header" style="background-color:black;">
 				<div class="header-top">
 					<div class="container">
 			  		<div class="row align-items-center">
