--- a/markwin.html
+++ b/markwin.html
@@ -1,6 +1,6 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
-	<head>
+	<head >
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
@@ -30,8 +30,9 @@
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
 		</head>
-		<header id="header">
-				<div class="header-top">
+		<body style="background-color:powderblue;">	
+		<header id="header" style="background-color:black;"> 
+				<div class="header-top" >
 					<div class="container">
 			  		<div class="row align-items-center">
 			  			<div class="col-lg-6 col-sm-6 col-6 header-top-left">
@@ -72,7 +73,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-
+<br><br><br><br><br>
 <div class="w3-content w3-section" style="max-width:1250px">
 
   <img class="mySlides w3-animate-fading" src="img/m2.jpg" style="width:100%">
@@ -102,7 +103,7 @@ function carousel() {
 
 	
 			<!-- Start Sample Area -->
-			<section class="sample-text-area">
+			<section class="sample-text-area" style="background-color:powderblue;">
 				<div class="container">
 					<h3 class="text-heading">Text Sample</h3>
 					<p class="sample-text">
@@ -117,7 +118,7 @@ From this standpoint, one could view our approach as more as a business consulta
 			<!-- End Sample Area -->
 			
 			<!-- Start Align Area -->
-			<div class="whole-wrap">
+			<div class="whole-wrap"style="background-color:powderblue;">
 				<div class="container">
 					<div class="section-top-border">
 						<div class="row">
