--- a/2s.html
+++ b/2s.html
@@ -30,8 +30,8 @@
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
 		</head>
-		<body>	
-			<header id="header">
+		<body style="background-color:powderblue;">	
+			<header id="header" style="background-color:black;">
 				<div class="header-top">
 					<div class="container">
 			  		<div class="row align-items-center">
@@ -72,6 +72,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
+<br><br><br><br><br>
 
 <div class="w3-content w3-section" style="max-width:1250px">
 
@@ -151,7 +152,7 @@ Brand across different verticals ….
 			<!-- End Sample Area -->
 			
 			<!-- Start Align Area -->
-			<div class="whole-wrap">
+			<div class="whole-wrap"style="background-color:powderblue;">
 				<div class="container">
 					<div class="section-top-border">
 						<h3 class="mb-30"></h3>
