--- a/dmv.html
+++ b/dmv.html
@@ -31,8 +31,8 @@
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
 		</head>
-		<body>	
-			<header id="header">
+		<body style="background-color:powderblue;">	
+			<header id="header" style="background-color:black;">
 				<div class="header-top">
 					<div class="container">
 			  		<div class="row align-items-center">
@@ -65,10 +65,13 @@
 						  <li><a href="markwin.html">Mark-Win</a></li>	
 				          <li><a href="contact.html">Contact</a></li>
 				        </ul>
-				      </nav><!-- #nav-menu-container -->					      		  
+				      </nav><!-- #nav-menu-container -->	
+					  
 					</div>
 				</div>
 			</header><!-- #header -->
+			<br><br><br><br><br>
+
 			<style>
 			body {
   margin: 0;
@@ -86,6 +89,7 @@
 }
 </style>
 <div class="hero-image">
+
 		        <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
