--- a/dmv.html
+++ b/dmv.html
@@ -102,10 +102,13 @@
   
 <br><br><br><br>
   <img class="mySlides" src="img1/1.jpg" style="width:100%">
-
-  
-
   <img class="mySlides" src="img1/2.jpg" style="width:100%">
+  <img class="mySlides" src="img1/3.jpg" style="width:100%">
+  <img class="mySlides" src="img1/4.jpg" style="width:100%">
+  <img class="mySlides" src="img1/5.jpg" style="width:100%">
+  <img class="mySlides" src="img1/6.jpg" style="width:100%">
+  <img class="mySlides" src="img1/7.jpg" style="width:100%">
+
 </div>
 
 <script>
